Fixed history header on small screen widths
This involved removing the hardcoded toolbar height. This code didn't appear to be actually changing anything, as removing the setting had no effect (other than allowing the toolbar to grow when wrapping).

--- a/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor-history/history-chooser/history-chooser.component.scss
+++ b/src/SIL.XForge.Scripture/ClientApp/src/app/translate/editor/editor-history/history-chooser/history-chooser.component.scss
@@ -7,6 +7,7 @@
 .toolbar {
   display: flex;
   overflow: hidden;
+  flex-wrap: wrap;
 
   .history-select {
     @include material-styles.dense_mat_select();
